Replaced copiesPerBoardGame with BoardGameAggregate